test/files/neg/t7251.check
B_2.scala:5: error: object s.Outer$Triple$ is not a value
    println( s.Outer$Triple$ )
               ^
one error found
